test/valid/annots.anf
mod annots {
    val x : i32 = 5
    def f((a: i8, b: bool), c: f32) : i16 = {
        { 1 } : i16
    }
    val (y : u8, z: u32) = (5, 6) : (u8, u32)
    def w = (5.0 : f64)
}
